--- a/package.json
+++ b/package.json
@@ -11,10 +11,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.12",
+    "@mui/material": "^5.15.15",
+    "@reduxjs/toolkit": "^2.2.3",
+    "@types/react-redux": "^7.1.33",
     "@vitejs/plugin-react-swc": "^3.6.0",
+    "axios": "^1.6.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
+    "react-redux": "^9.1.1",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@it-incubator/eslint-config": "^1.0.2",
